--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ email: your-email@example.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://www.nobsfit.pro/" # the base hostname & protocol for your site
 
 # Social settings
@@ -61,5 +61,3 @@ google_analytics:
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: chrisbobbe/jekyll-theme-prologue
 collections: [sections]
-
-theme: jekyll-theme-midnight
